--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "../node_modules/.bin/webpack serve --mode development --open"
+    "start": "node_modules/.bin/webpack serve --mode development --open"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
     "css-loader": "^6.7.3",
     "json-loader": "^0.5.7",
     "style-loader": "^3.3.1",
+    "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
   }
